# verba

./: .gitignore  API.md  APK_SLIMMING.md  CLAUDE.md  GTM_PLAN.md  LICENCES.md  MODEL_PACKAGES.md  PRODUCT_REVIEW.md  TTS_ENGINES.md  TWEAKS.md  VOICES.md  justfile  package-lock.json  package.json
.claude/skills/fix-tts-mispronunciation/: SKILL.md
docs/: android-cross-compile.md  architecture.md  whisper-models.md
scripts/: android-build.sh  build_gb_dict.py  corrupt_text.py  create_kokoro_voice.py  diarize_der.py  download_t5_grammar_onnx.py  export_finetuned_grammar.py  fetch_blog_corpus.py  finetune_grammar_router.py  finetune_grammar_t5.py  grammar_bench.py  make_grammar_pairs.py  pack_kokoro_voices.py  patch_piper_durations.py  split_tts_voices.py  stt_grammar_probe.py  tts_roundtrip.py
scripts/data/: CLAUDE.md  corrector_test_cases.json  router_test_cases.json
src/: import.js  index.html  main.js  styles.css  tailwind.js
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  host_stubs.cpp  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/data/: gb_dict.json  model-manifest.json
src-tauri/data/grammar/: config.0.0.1.json
src-tauri/src/: audio.rs  config.rs  debug_wav.rs  engine.rs  feeds.rs  gb_english.rs  heteronyms.rs  lib.rs  library.rs  media.rs  mispronunciations.rs  models.rs  paste.rs  piper.rs  player.rs  recorder.rs  share.rs  tts.rs  tts_cache.rs  webfetch.rs
src-tauri/src/meeting/: diarize.rs  gallery.rs  loopback.rs  mod.rs  speakers.rs  store.rs  summarize.rs  system_tap.rs
src-tauri/src/postprocess/: grammar_neural.rs  itn.rs  mod.rs
