[package]
name = "verba-rs"
version = "0.1.0"
description = "Voice dictation app"
authors = ["Alex"]
edition = "2021"
default-run = "verba-rs"

[lib]
name = "verba_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eval_pipeline"
path = "src/bin/eval_pipeline.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
dirs = "6"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
futures-util = "0.3"
cpal = "0.15"
sherpa-onnx = "1.12"
chrono = { version = "0.4", features = ["serde"] }
nlprule = { path = "../../nlprule/nlprule" }
symspell = "0.5"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-18"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.17"
flate2 = "1"
tar = "0.4"
piper-plus-g2p = { version = "0.4", default-features = false, features = ["english"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"
enigo = "0.3"
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
core-foundation = "0.10"

[dev-dependencies]
rustfft = "6"
hound = "3.5"
tempfile = "3"

# GPL-free build: use a vendored sherpa-onnx-sys whose build.rs drops the
# piper_phonemize and espeak-ng (GPL) static-link directives. Combined with the
# sherpa native build done without TTS (-DSHERPA_ONNX_ENABLE_TTS=OFF), the
# shipped binary links none of their code. Same crate version (1.12.34).
[patch.crates-io]
sherpa-onnx-sys = { path = "vendor/sherpa-onnx-sys" }
